apps/home-assistant/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  type: ClusterIP
